--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
     <head>
-    <title>Mostrar Data e Hora</title>
+    <title>Portfólio - Miguel Valério Malinoski</title>
     <script>
         function showDateTime() {
             let now = new Date();
